# job-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: search_filters.yaml.example  user_profile.yaml.example
tools/: agent.py  analyze_jobs.py  generate_documents.py  generate_report.py  llm_client.py  parse_jobs.py  run_pipeline.py  score_jobs.py  scrape_jobs.py  setup.py  test_pipeline.py
